force-app/main/default/objects/MUSW__License2__c/fields/Watchlist_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Additional_Info__c</fullName>
    <label>Watchlist Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>