force-app/main/default/objects/MUSW__License2__c/fields/Watchlist_Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Important_Notes__c</fullName>
    <formula>IF( TEXT( Watchlist__c ) = "NSF Payment", "Verify bank account info!", "None")</formula>
    <label>Watchlist Important Notes</label>
    <type>Text</type>
</CustomField>