force-app/main/default/objects/MUSW__License2__c/validationRules/MUSW__LicenseeIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__LicenseeIsRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND (MUSW__Primary_Licensee__c = null,  MUSW__Applicant_is_Licensee__c  = false,ISNEW(),$Profile.Name != 'CP Profile')</errorConditionFormula>
    <errorMessage>Licensee is required.</errorMessage>
</ValidationRule>