force-app/main/default/objects/MUSW__License2__c/listViews/Chris_s_licenses.listView-meta.xml
<ListView>
    <fullName>Chris_s_licenses</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>tandr</value>
    </filters>
    <label>Chris's Licenses</label>
</ListView>