force-app/main/default/objects/MUSW__License2__c/listViews/Issued_Licenses.listView-meta.xml
<ListView>
    <fullName>Issued_Licenses</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>abd_License_Type__c</columns>
    <columns>abd_Active_Status__c</columns>
    <columns>abd_Effective_Date__c</columns>
    <columns>abd_Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__Status__c</field>
        <operation>equals</operation>
        <value>Issued</value>
    </filters>
    <label>Issued Licenses</label>
</ListView>