force-app/main/default/objects/MUSW__License2__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Class__c</columns>
    <columns>MUSW__Primary_Licensee__c</columns>
    <columns>abd_Length__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Watchlist_Image__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>